--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h3>Knowledge</h3>
 
     <ul>
-        <li>Can 6 languages (Hindi, English, Punjabi, Sanskrit, Urdu and French)</li>
+        <li>Can speak  languages (Hindi, English, Punjabi, Urdu and Russian)</li>
         <li>Deep Knowledge of cyeber Security and Ethical Hacking</li>
         <li>Full Stack Web Developer</li>
         <li>Android App Developer</li>
